fix spacing between image and user block

--- a/styles.css
+++ b/styles.css
@@ -162,3 +162,10 @@ input {
 body {
   overflow-x: hidden;
 }
+.title-image {
+  margin-bottom: 18px;
+}
+
+.user-block {
+  margin-top: 14px;
+}
